--- a/templates/crop_recommendations.html
+++ b/templates/crop_recommendations.html
@@ -4,53 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crop Recommendations</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-image: url('/static/bg_4.jpg'); /* Specify the path to your background image */
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            height: 100vh; /* Set the height to 100% of the viewport height */
-            
-        }
-
-        h2 {
-            text-align: center;
-            margin-top: 20px;
-            margin-bottom: 30px;
-            color: #333;
-        }
-
-        table {
-            border-collapse: collapse;
-            width: 80%;
-            margin: auto;
-            background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        th, td {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 10px;
-        }
-
-        th {
-            background-color: #f2f2f2;
-            font-weight: bold;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-
-        tr:hover {
-            background-color: #eb8305;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/crop.css') }}">
 </head>
 <body>
     <h2>Crop Recommendations</h2>
