--- a/templates/indi.html
+++ b/templates/indi.html
@@ -7,77 +7,8 @@
     <title>Weather App for Farmers</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css">
-
-    <style>
-        body {
-            min-height: 100vh;
-            background-image: url('/static/bg_3.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            color: #ffffff;
-            font-family: 'Arial', sans-serif;
-        }
-
-        .weather-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-        }
-
-        h2 {
-            color: #ffd700;
-            text-shadow: 2px 2px 4px #000000;
-        }
-
-        .weather-box {
-            background-color: rgba(255, 255, 255, 0.1);
-            padding: 15px;
-            margin-top: 15px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s; /* Smooth transition effect */
-        }
-
-        /* Change color on hover */
-        .weather-box:hover {
-            background-color: rgba(255, 255, 255, 0.3);
-        }
-
-        h3 {
-            color: #ffd700;
-        }
-
-        p {
-            font-size: 16px;
-            margin-bottom: 10px;
-        }
-
-        i {
-            font-size: 24px;
-            margin-right: 10px;
-        }
-
-        .btn-get-weather {
-            margin-top: 10px;
-            margin-bottom: 10px;
-        }
-
-        .alert {
-            background-color: #d9534f;
-            border-color: #d43f3a;
-            color: #ffffff;
-        }
-
-        .crop-info {
-            background-color: rgba(255, 255, 255, 0.1);
-            padding: 15px;
-            margin-top: 15px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/weather.css') }}">
+   
 </head>
 
 <body>
