--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -13,7 +13,7 @@
         Your browser does not support the video tag.
     </video>
 
-    <div class="next-button" onclick="window.location.href='{{ url_for('next_page') }}';">
+    <div class="next-button" onclick="window.location.href='{{ url_for('my_Profile') }}';">
         <h1>मम कार्यम्</h1>
         <p>मम कार्याणि</p>
     </div>
