--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -14,7 +14,7 @@
     </video>
 
     <div class="next-button" onclick="window.location.href='{{ url_for('my_Profile') }}';">
-        <h1>मम कार्यम्</h1>
+        <h1>मेरी प्रोफाइल</h1>
         <p>मम कार्याणि</p>
     </div>
 
@@ -25,7 +25,7 @@
         </div>
         
         <div class="option-box" onclick="window.location.href='{{ url_for('crop_recommendations') }}';">
-            <h1>मिट्टी की परत</h1>
+            <h1>फसल की जानकारी</h1>
             <p>मिट्टी की परत विवरण देखने के लिए क्लिक करें।</p>
         </div>
         
